--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <h1>10 Ways to Speak <a href="en/us/help/ten-way-to-speak-lufthansa-airlines-customer-service.html">southwest</a> southwest Customer Service</h1>
+  <h1>10 Ways to Speak southwest airlines Customer Service</h1>
 <p>Reaching a live representative at southwest can make all the difference. You can call 📞 <a href="tel:+1-888-486-3822">1→888→(486)→3822</a> or 1-800 (US/OTA) to speak directly with an agent—available 24/7. Whether it’s booking issues, cancellations, refunds, or technical problems, this guide walks you through every contact method available so your concerns are handled quickly and easily.</p>
 <h2>Call to Speak with a Live Person</h2>
 <p>Call 📞 <a href="tel:+1-888-486-3822">1→888→(486)→3822</a> or 1-800 (Live Person) to speak directly to our customer service team. After the automated prompts, just say “agent” or press “0” to reach a representative faster. Don’t feel like calling? Use our live chat feature on the southwest website under the Help section.</p>
